# cse230-group4

./: README.md  SpaceForce_docs.md  ship.cabal  snake.cabal
src/: Lol.hs  Ship.hs  Snake.hs  UI.hs
test/: Common.hs  Test.hs
