name:                ship
version:             0.1.0.0
author:              Venkat K, Sumanth C, Nirmal T, Abhilash B
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ship
  hs-source-dirs:      src
  other-modules:       UI
                     , Ship
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , QuickCheck

test-suite test
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base         >= 4.7 && < 5
                      , brick
                      , filepath
                      , directory
                      , containers
                      , QuickCheck
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , process